[gd_scene load_steps=4 format=3 uid="uid://bkfvdephju570"]

[ext_resource type="Script" path="res://Menu Screen/Settings.gd" id="1_fyudh"]
[ext_resource type="Shader" path="res://Menu Screen/settings.gdshader" id="2_8wk31"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cjiyb"]
shader = ExtResource("2_8wk31")
shader_parameter/amount = 4.0

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyudh")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_cjiyb")
layout_mode = 0
offset_right = 1097.0
offset_bottom = 664.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -230.0
offset_right = 300.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MasterVolume" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Master "

[node name="MusicVolume" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Music"

[node name="SoundFX" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Sound"

[node name="Fullscreen" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Fullscreen"

[node name="Borderless" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Borderless"

[node name="Checks" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterVolume" type="HSlider" parent="HBoxContainer/Checks"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.001
value = 1.0

[node name="MusicVolume" type="HSlider" parent="HBoxContainer/Checks"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="SoundFX" type="HSlider" parent="HBoxContainer/Checks"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="Fullscreen" type="CheckBox" parent="HBoxContainer/Checks"]
layout_mode = 2
size_flags_vertical = 3

[node name="Borderless" type="CheckBox" parent="HBoxContainer/Checks"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="value_changed" from="HBoxContainer/Checks/MasterVolume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Checks/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Checks/SoundFX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="HBoxContainer/Checks/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="toggled" from="HBoxContainer/Checks/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="HBoxContainer/Checks/Borderless" to="." method="_on_borderless_toggled"]
